--- a/concessionaria-intelectah-desafio/Concessionaria.MVC/Pages/_ViewImports.cshtml
+++ b/concessionaria-intelectah-desafio/Concessionaria.MVC/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Concessionaria.MVC
-@namespace Concessionaria.MVC.Pages
+﻿@using ConcessionariaApp.MVC
+@namespace ConcessionariaApp.MVC.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
