--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Shared/_Layout.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Shared/_Layout.cshtml
@@ -5,48 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ConcessionariaApp.MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/icons/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ConcessionariaApp.MVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/custom-style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/layout/index.css" asp-append-version="true" />
+    <!-- fontawsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ConcessionariaApp.MVC</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Index</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
+    <partial name="_Header" />
+    <section class="cont-section-principal">
+        <partial name="_Sidebar" />
+        <partial name="_SidebarMobile" />
+        <main class="main" role="main">
+            <section class="pb-3">
+                @RenderBody()
+            </section>
         </main>
-    </div>
+    </section>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - ConcessionariaApp.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        const containerSidebar = document.querySelector('.cont-sidebar');
+        const containerSidebarMobile = document.querySelector('.cont-sidebar-mobile');
+        const btnToggle = document.querySelector('#btn-header-toggle');
+        const main = document.querySelector('.main');
+        const descItem = document.querySelectorAll('.desc-col-sidebar');
+        const iconColuna = document.querySelectorAll('.span-col-sidebar');
+        const descItemDropdow = document.querySelectorAll('.descDropdowColapseCustom');
+
+        btnToggle.onclick = () => toggleSidebar();
+
+        const toggleSidebar = () => {
+            debugger;
+            var statusAtual = btnToggle.getAttribute("data-state");
+            var statusFechado = "false";
+            var statusAberto = "true";
+
+            if (statusAtual === statusFechado) {
+                containerSidebar.classList.add("open-cont-sidebar");
+                containerSidebarMobile.classList.add("open-sb-container-mobile");
+                main.classList.add("open-main");
+                iconColuna.forEach(element => { element.classList.add("open-icon-col-sidebar"); })
+                descItem.forEach(element => { element.classList.add("open-desc-col-sidebar"); })
+                descItemDropdow.forEach(element => { element.classList.add("open-desc-col-sidebar"); })
+                btnToggle.setAttribute("data-state", statusAberto);
+            } else {
+                containerSidebar.classList.remove("open-cont-sidebar");
+                containerSidebarMobile.classList.remove("open-sb-container-mobile");
+                main.classList.remove("open-main");
+                iconColuna.forEach(element => { element.classList.remove("open-icon-col-sidebar"); })
+                descItem.forEach(element => { element.classList.remove("open-desc-col-sidebar"); })
+                descItemDropdow.forEach(element => { element.classList.remove("open-desc-col-sidebar"); })
+                btnToggle.setAttribute("data-state", statusFechado);
+            }
+        }
+        document.addEventListener('DOMContentLoaded', function () {
+            debugger;
+            const currentPage = window.location.pathname.split('/').pop(); // Obtém o nome da página atual
+            const navLinks = document.querySelectorAll('.col-sidebar');
+            navLinks.forEach(link => {
+                if (link.getAttribute('data-page') === currentPage) {
+                    link.style.color = 'chocolate';
+                }else{
+                    link.style.color = 'darkslategray';
+                }
+            });
+        });
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
