--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/_ViewStart.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
-    Layout = "_Layout";
+    var usuarioLogado = Context.User.Identity.IsAuthenticated;
+    if(usuarioLogado)
+    {
+        Layout = "_Layout";
+    }
+    else
+    {
+        Layout = "_LayoutVazio";
+    }
 }
