--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Index.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Index.cshtml
@@ -1,53 +1,33 @@
-﻿@model ConcessionariaApp.Application.Dtos.Autenticacao.RegistrarUsuarioDTO 
-<div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <h2 class="text-center mb-4">Registro de Usuário</h2>
-            <form asp-action="Registrar" method="post">
-                <div>
-                    <label asp-for="Nome">Username</label>
-                    <input asp-for="Nome" />
-                    <span asp-validation-for="Nome"></span>
-                </div>
-                <div>
-                    <label asp-for="Sobrenome">Username</label>
-                    <input asp-for="Sobrenome" />
-                    <span asp-validation-for="Sobrenome"></span>
-                </div>
-                <div>
+﻿@model ConcessionariaApp.Application.Dtos.Autenticacao.AutenticarUsuarioDTO 
+@{
+    ViewData["Title"] = "Login";
+}
 
-                    <label asp-for="Email">Email</label>
-                    <input asp-for="Email" />
-                    <span asp-validation-for="Email"></span>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="col-md-4">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h3 class="text-center mb-4">Login</h3>
+                <form asp-action="Index" method="post">
+                    <div class="mb-3">
+                        <label asp-for="Email" class="form-label">Email</label>
+                        <input asp-for="Email" type="email" class="form-control" placeholder="Digite seu email">
+                        <span asp-validation-for="Email"></span>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="Senha" class="form-label">Senha</label>
+                        <input input asp-for="Senha" type="password" class="form-control" placeholder="Digite sua senha">
+                        <span asp-validation-for="Senha"></span>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Entrar</button>
+                    </div>
+                </form>
+                <div class="mt-3 text-center">
+                    <span>Não tem uma conta? <a asp-controller="Login" asp-action="Registrar">Cadastre-se</a></span>
                 </div>
-                <div>
-                    <label asp-for="Senha">Password</label>
-                    <input asp-for="Senha" type="password" />
-                    <span asp-validation-for="Senha"></span>
-                </div>
-                <div>
-                    <label asp-for="SenhaConfirmacao">Confirm Password</label>
-                    <input asp-for="SenhaConfirmacao" type="password" />
-                    <span asp-validation-for="SenhaConfirmacao"></span>
-                </div>
-                <button type="submit">Register</button>
-            </form>
             </div>
         </div>
     </div>
-
-    <script>
-        // Script para verificar se as senhas coincidem
-        document.getElementById('registrationForm').addEventListener('submit', function (event) {
-            var senha = document.getElementById('senha').value;
-            var confirmarSenha = document.getElementById('confirmarSenha').value;
-            var errorMessage = document.getElementById('errorMessage');
-
-            if (senha !== confirmarSenha) {
-                event.preventDefault(); // Impede o envio do formulário
-                errorMessage.style.display = 'block'; // Exibe a mensagem de erro
-            } else {
-                errorMessage.style.display = 'none'; // Esconde a mensagem de erro
-            }
-        });
-    </script>
+</div>
+   
