--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Registrar.cshtml
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/Views/Login/Registrar.cshtml
@@ -1,5 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model ConcessionariaApp.Application.Dtos.Autenticacao.RegistrarUsuarioDTO
 @{
+    ViewData["Title"] = "Registrar";
 }
+
+<div class="container d-flex justify-content-center align-items-center ">
+    <div class="col-md-4">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h4 class="text-center mb-4">Registro de Usuário</h4>
+                <form asp-action="Registrar" method="post">
+                    <div class="mb-1">
+                        <label asp-for="Nome" class="form-label">Nome</label>
+                        <input asp-for="Nome" class="form-control" />
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                    <div class="mb-1">
+                        <label asp-for="Sobrenome" class="form-label">Sobrenome</label>
+                        <input asp-for="Sobrenome" class="form-control" />
+                        <span asp-validation-for="Sobrenome" class="text-danger"></span>
+                    </div>
+                    <div class="mb-1">
+                        <label asp-for="Email" class="form-label">Email</label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="mb-1">
+                        <label asp-for="Senha" class="form-label">Senha</label>
+                        <input asp-for="Senha" type="password" class="form-control" />
+                        <span asp-validation-for="Senha" class="text-danger"></span>
+                    </div>
+                    <div class="mb-1">
+                        <label asp-for="SenhaConfirmacao" class="form-label">Confirmar Senha</label>
+                        <input asp-for="SenhaConfirmacao" type="password" class="form-control" />
+                        <span asp-validation-for="SenhaConfirmacao" class="text-danger"></span>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Registrar</button>
+                    </div>
+                </form>
+                <div class="mt-3 text-center">
+                    <span>Já tem uma conta? <a asp-controller="Login" asp-action="Index">Entrar</a></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
